version/0.4.0b2/_sources/api/ansys/sam/sysml2/meta_model/relationship/Relationship.rst.txt






:class:`Relationship`
=====================


.. py:class:: ansys.sam.sysml2.meta_model.relationship.Relationship(element_id: str)

   Bases: :py:obj:`ansys.sam.sysml2.meta_model.element.Element`


   
   Java class 'com.ansys.metamodel.sysml2.Relationship'.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: Relationship

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~owned_related_element`
            - Get the owned related element property.
          * - :py:attr:`~owning_related_element`
            - Get the owning related element property.
          * - :py:attr:`~related_element`
            - Get the related element property.
          * - :py:attr:`~relationship_owner`
            - Get the relationship owner property.
          * - :py:attr:`~source`
            - Get the source property.
          * - :py:attr:`~target`
            - Get the target property.
          * - :py:attr:`~is_implied`
            - Get the is implied property.







Import detail
-------------

.. code-block:: python

    from ansys.sam.sysml2.meta_model.relationship import Relationship

Property detail
---------------

.. py:property:: owned_related_element
   :type: list[ansys.sam.sysml2.meta_model.element.Element]


   
   Get the owned related element property.





   :Returns:

       :class:`python:list`\["Element"]
           Value of property owned related element.











   ..
       !! processed by numpydoc !!

.. py:property:: owning_related_element
   :type: ansys.sam.sysml2.meta_model.element.Element


   
   Get the owning related element property.





   :Returns:

       "Element"
           Value of property owning related element.











   ..
       !! processed by numpydoc !!

.. py:property:: related_element
   :type: list[ansys.sam.sysml2.meta_model.element.Element]


   
   Get the related element property.





   :Returns:

       :class:`python:list`\["Element"]
           Value of property related element.











   ..
       !! processed by numpydoc !!

.. py:property:: relationship_owner
   :type: ansys.sam.sysml2.meta_model.element.Element


   
   Get the relationship owner property.





   :Returns:

       "Element"
           Value of property relationship owner.











   ..
       !! processed by numpydoc !!

.. py:property:: source
   :type: list[ansys.sam.sysml2.meta_model.element.Element]


   
   Get the source property.





   :Returns:

       :class:`python:list`\["Element"]
           Value of property source.











   ..
       !! processed by numpydoc !!

.. py:property:: target
   :type: list[ansys.sam.sysml2.meta_model.element.Element]


   
   Get the target property.





   :Returns:

       :class:`python:list`\["Element"]
           Value of property target.











   ..
       !! processed by numpydoc !!

.. py:property:: is_implied
   :type: bool


   
   Get the is implied property.





   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           Value of property is implied.











   ..
       !! processed by numpydoc !!






